# convertbng

./: .gitignore  .travis.yml  CITATION.cff  CMakeLists.txt  Makefile  README.md  README.rst  appveyor.yml  dev-requirements.txt  manifest.in  pre_install.py  pyproject.toml  release.py  setup.cfg  setup.py  upload  usage.rst
.github/: dependabot.yml
.github/workflows/: wheels.yml
ci/: before_deploy.sh  build_wheel.sh  install.sh  osx_utils.sh  pre_install.py  pre_install.sh  script.sh  travis_osx_steps.sh
convertbng/: convertbng_p.pxd  cutil.c  cutil.pyx  header.h  liblonlat_bng.dylib  rlib.h  util.py
convertbng/cutil/: __init__.c  __init__.pyx  convertbng_p.pxd  cutil.c  cutil.pyx  rlib.h
convertbng/test/: test_convertbng.py
src/: liblonlat_bng.dylib
src/convertbng/: convertbng_p.pxd  cutil.pyx  util.py
test/: test_convertbng.py
tests/: test_convertbng.py
