[metadata]
name = convertbng
version = attr: convertbng.util.__version__
description = Fast lon, lat to and from ETRS89 and BNG (OSGB36) using the OS OSTN15 transform via Rust FFI
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/urschrei/convertbng
author = Stephan Hügel
author_email = urschrei@gmail.com
license = MIT
license_files = license.txt
keywords = Geo, BNG, OSGB36, GIS, ETRS89, OSTN02, OSTN15
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Scientific/Engineering :: GIS
project_urls =
    Source = https://github.com/urschrei/convertbng
    Tracker = https://github.com/urschrei/convertbng/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    numpy >= 1.11.0
    cython >= 0.29.0
python_requires = >=3.7
setup_requires =
    setuptools_scm
    cython >= 0.29.0
tests_require = pytest >= 6.2.2
test_suite = test

[bdist_wheel]
universal = 1

[options.extras_require]
test =
    pytest >= 6.2.2
all =
    %(test)s
